--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gulp-purgecss": "^5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   }
